Fixing scroll on mobile 2 - removing animations from stack in mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 html,
 body,
 #root {
@@ -24,6 +28,7 @@ body,
 body {
   overflow-x: hidden;
   overscroll-behavior: none;
+  width: 100%;
 }
 
 .no-scrollbar {
